Firebase integrated, Flow checked. Ratings and Comments working.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="title_activity_maps2">Map</string>
     <string name="title_activity_becaon_sense">BecaonSenseActivity</string>
     <string name="title_activity_becon_sense">BeconSenseActivity</string>
+    <string name="title_activity_main1">MainActivity1</string>
 
 </resources>
